Add run_script action

--- a/conf_example.yaml
+++ b/conf_example.yaml
@@ -52,6 +52,10 @@ actions:
       - file_name: "file1.txt" # имя файла для удаления, будет искаться в репозитории пакета 
       - file_name: "file2.txt"
 
+  # run_script - список скриптов для выполнения в репозитории rpm пакета.
+  - run_script:
+      - script: "custom_script.sh" # имя скрипта для выполнения, скрипт должен лежать в scripts директории
+
 
 # не нужно в первой версии тулзы
   # dependencies - список зависимостей, которые необходимо добавить (можно добавить в сабпакеты, указав subpackage).
@@ -79,5 +83,3 @@ actions:
 
   # run_custom_scripts - список скриптов для выполнения в репозитории rpm пакета.
   # скрипт будет выполняться в директории с пакетом. Скрипт выполняется самым первым в списке действий.
-  - run_custom_scripts:
-      - "custom_script.sh" # имя скрипта
