--- a/tests/configs/kernel-a9/autopatch/kernel-a9.yaml
+++ b/tests/configs/kernel-a9/autopatch/kernel-a9.yaml
@@ -35,7 +35,7 @@ actions:
         number: 101
 
   - replace:
-      - target: "kernel-aarch64-64k-debug-rhel.config"
+      - target: "kernel*rhel.config"
         find: |
               # CONFIG_BE2NET_BE2 is not set
               # CONFIG_BE2NET_BE3 is not set
@@ -43,175 +43,7 @@ actions:
               CONFIG_BE2NET_BE2=y
               CONFIG_BE2NET_BE3=y
         count: 1
-      - target: "kernel-aarch64-64k-debug-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-aarch64-64k-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-aarch64-64k-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        count: 1
-      - target: "kernel-aarch64-debug-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-aarch64-debug-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-aarch64-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-aarch64-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-aarch64-rt-debug-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-aarch64-rt-debug-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-aarch64-rt-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-aarch64-rt-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-ppc64le-debug-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-ppc64le-debug-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-ppc64le-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-ppc64le-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-s390x-debug-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-s390x-debug-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-s390x-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-s390x-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-s390x-zfcpdump-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-s390x-zfcpdump-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-x86_64-debug-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-x86_64-debug-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-x86_64-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-x86_64-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-x86_64-rt-debug-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-x86_64-rt-debug-rhel.config"
-        find: "# CONFIG_MLX4_CORE_GEN2 is not set"
-        replace: "CONFIG_MLX4_CORE_GEN2=y"
-        count: 1
-      - target: "kernel-x86_64-rt-rhel.config"
-        find: |
-              # CONFIG_BE2NET_BE2 is not set
-              # CONFIG_BE2NET_BE3 is not set
-        replace: |
-              CONFIG_BE2NET_BE2=y
-              CONFIG_BE2NET_BE3=y
-        count: 1
-      - target: "kernel-x86_64-rt-rhel.config"
+      - target: "kernel*rhel.config"
         find: "# CONFIG_MLX4_CORE_GEN2 is not set"
         replace: "CONFIG_MLX4_CORE_GEN2=y"
         count: 1
